added teachers patch
